FontEnd APP-DSS-SCSS

--- a/src/app/theme/layout/admin/nav-bar/nav-bar.component.html
+++ b/src/app/theme/layout/admin/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <div class="m-header">
-  <a href="javascript:" class="mobile-menu" id="mobile-collapse" title="Click to Menu Collapse" (click)="navCollapse()"><span></span></a>
+  <a href="javascript:" class="mobile-menu" id="mobile-collapse" title="Click to Menu Collapse" (click)="toggleMenuCollapse()"><span></span></a>
   <a href="javascript:" class="header-mobile-collapse" id="mobile-collapse1" (click)="navCollapseMob()">
     <i class="feather icon-menu"></i>
   </a>
