--- a/src/app/theme/layout/admin/navigation/navigation.component.html
+++ b/src/app/theme/layout/admin/navigation/navigation.component.html
@@ -1,4 +1,5 @@
 <div class="navbar-wrapper">
-    <app-nav-content (NavMobCollapse)="navMobCollapse()"></app-nav-content>
+    <app-nav-content (NavMobCollapse)="navMobCollapse()"
+    ></app-nav-content>
 </div>
   
