--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -35,3 +35,10 @@
 
 // custom
 @import 'scss/themes/custom';
+
+
+// icon
+@import 'scss/themes/font/datta-icon';
+@import 'scss/themes/font/feather';
+//@import 'scss/themes/font/fontawesome';
+@import 'scss/themes/font/flaticon';
