--- a/src/scss/themes/font/_datta-icon.scss
+++ b/src/scss/themes/font/_datta-icon.scss
@@ -1,5 +1,18 @@
 @charset "UTF-8";
 
+@font-face {
+  font-family: 'pct';
+  src: url('./../../../assets/fonts/pct.eot');
+  src:
+    url('./../../../assets/fonts/pct.eot?#iefix') format('embedded-opentype'),
+    url('./../../../assets/fonts/pct.woff') format('woff'),
+    url('./../../../assets/fonts/pct.ttf') format('truetype'),
+    url('./../../../assets/fonts/pct.svg#pct') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 [data-icon]:before {
   font-family: 'pct' !important;
   content: attr(data-icon);
