--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,5 +15,12 @@
 @import '../node_modules/bootstrap/scss/utilities/api';
 @import '../node_modules/bootstrap/dist/css/bootstrap.css';
 
+
+
+// theme layouts
+//@import 'scss/themes/layouts/menu-lite';
+//@import 'scss/themes/layouts/menu-ng';
+
+
 @import 'scss/main';
 
