--- a/src/app/page/authentication/sign-in/sign-in.component.html
+++ b/src/app/page/authentication/sign-in/sign-in.component.html
@@ -5,7 +5,7 @@
           <div class="col-md-12">
             <div class="card-body">
               <img src="assets/images/logo-dark.png" alt="logo" class="img-fluid mb-4" />
-              <h4 class="mb-3 f-w-400">Sigin</h4>
+              <!--<h4 class="mb-3 f-w-400">Sigin</h4>-->
                <!-- Hiển thị thông báo lỗi nếu có -->
               <div *ngIf="errorMessage" class="alert alert-danger">
                 {{ errorMessage }}
